--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,35 +1,30 @@
 // -----------------------------------------------------------------------------
 // This file contains very basic styles.
 // -----------------------------------------------------------------------------
-
-/**
- * Set up a decent box model on the root element
- */
 html {
   box-sizing: border-box;
+  font-size: 62.5%; // 1rem = 10px
 }
 
-/**
- * Make all elements from the DOM inherit from the parent box-sizing
- * Since `*` has a specificity of 0, it does not override the `html` value
- * making all elements inheriting from the root box-sizing value
- * See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
- */
-*,
-*::before,
-*::after {
+*, *:before, *:after {
   box-sizing: inherit;
 }
 
-/**
- * Basic styles for links
- */
-a {
-  color: $brand-color;
-  text-decoration: none;
+* {
+  margin: 0;
+  padding: 0;
+}
 
-  @include on-event {
-    color: $text-color;
-    text-decoration: underline;
-  }
+body {
+  font-family: $font-en-default, $font-ge-default, sans-serif;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.25;
+  color: $text-primary-color;
+  background-color: $main-bg-color;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
