--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -1,3 +1,44 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the button component.
 // -----------------------------------------------------------------------------
+
+
+.btn {
+  width: 36rem;
+  height: 8rem;
+  border-radius: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  outline: none;
+  border: none;
+  font-family: inherit;
+  font-size: 2.4rem;
+  color: #fff;
+  cursor: pointer;
+  border: 1px solid transparent;
+  transition: all .3s ease-in-out;
+
+  &--primary {
+    background-color: $main-red-color;
+
+    &:hover {
+      background-color: transparent;
+      border: 1px solid $main-red-color;
+      color: $main-red-color;
+      transition: all .3s ease-in-out;
+    }
+  }
+
+  &--outline-primary {
+    border: 1px solid $main-red-color;
+    background-color: transparent;
+    color: $main-red-color;
+
+    &:hover {
+      background-color: $main-red-color;
+      color: #fff;
+      transition: all .3s ease-in-out;
+    }
+  }
+}
