--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -17,7 +17,7 @@
   color: #fff;
   cursor: pointer;
   border: 1px solid transparent;
-  transition: all .3s ease-in-out;
+  transition: hover .3s ease-in-out;
 
   &--primary {
     background-color: $main-red-color;
