--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -6,10 +6,10 @@
 .header {
   height: 18.3rem;
   // position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  // position: relative;
+  // left: 0;
+  // right: 0;
+  // top: 0;
+  position: relative;
   z-index: 10;
 
   .container {
