--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -5,10 +5,6 @@
 
 .header {
   height: 18.3rem;
-  // position: fixed;
-  // left: 0;
-  // right: 0;
-  // top: 0;
   position: relative;
   z-index: 10;
 
@@ -28,17 +24,38 @@
     align-items: center;
 
     &__link {
-      font-size: 20px;
+      // font-size: 2rem;
+      font-size: 1vw;
       font-family: inherit;
+      transition: hover .25s ease-in-out;
 
       & + .nav__link {
-        margin-left: 5rem;
+        // margin-left: 5rem;
+        margin-left: 2.6vw;
+      }
+
+      &:active, &:link {
+        
+        &:hover {
+          color: $main-red-color;
+          transition: all .25s ease-in-out;
+        }
       }
     }
   }
 
   &__lang {
-    margin-left: 7rem;
-    font-size: 20px;
+    // margin-left: 7rem;
+    margin-left: 3.6vw;
+    // font-size: 2rem;
+    font-size: 1vw;
+    transition: all .25s ease-in-out;
+
+    &:active, &:link {
+      &:hover {
+        color: $main-red-color;
+        transition: all .25s ease-in-out;
+      }
+    }
   }
 }
