slider finished and social media icons added

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -12,4 +12,5 @@ $text-primary-color: #3F3D56;
 $main-bg-color: #EEF2F8;
 $border-grey-color: #DCDFE8;
 $text-grey-color: #8F909B;
+$slider-bullet-grey: #B4B7BF;
 $main-red-color: #E03852;
