background objects added to about us section

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -9,6 +9,7 @@ $font-en-default: 'Ubuntu';
 
 // Colors
 $text-primary-color: #3F3D56;
+$text-secondary-color: #171A30;
 $main-bg-color: #EEF2F8;
 $border-grey-color: #DCDFE8;
 $text-grey-color: #8F909B;
