--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -2,6 +2,7 @@
 // This file contains styles that are specific to the home page.
 // -----------------------------------------------------------------------------
 
+// Main Section
 .main {
   height: 1236px;
   position: relative;
@@ -63,7 +64,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url(../img/header-path.svg);
+    background-image: url(../img/objects/header-object.svg);
     background-repeat: no-repeat;
     // background-position: -94rem -166rem;
     // background-position: -131rem -166rem;
@@ -121,7 +122,7 @@
   top: 55vh;
   transform: rotate(-90deg);
   display: flex;
-  
+
   z-index: 100;
 
   &__title {
@@ -140,11 +141,11 @@
     width: 2rem;
     height: 2rem;
     fill: #fff;
-    transition: all .3s cubic-bezier(0.785, 0.135, 0.15, 0.8);
+    transition: all 0.3s cubic-bezier(0.785, 0.135, 0.15, 0.8);
 
     &:hover {
       transform: scale(1.5);
-      transition: all .3s cubic-bezier(0.785, 0.135, 0.15, 0.8);
+      transition: all 0.3s cubic-bezier(0.785, 0.135, 0.15, 0.8);
     }
   }
 
@@ -153,5 +154,98 @@
     height: 2rem;
     cursor: pointer;
     transform: rotate(90deg);
+  }
+}
+
+// About Section
+.about {
+  position: relative;
+  margin-top: 20rem;
+
+  .container {
+    display: flex;
+  }
+  &__cards {
+    flex: 0 0 50%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    .cards-group {
+      display: flex;
+      flex-direction: column;
+      margin-right: 9rem;
+    }
+
+    .card {
+      background-color: #fff;
+      border-radius: 12px;
+      box-shadow: 0 3px 20px rgba(#7699fc, 0.1);
+      width: 28rem;
+      min-height: 38rem;
+      padding: 4rem;
+      padding-left: 5rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+
+      &__image {
+        width: 10rem;
+      }
+
+      &__title {
+        color: $text-secondary-color;
+        font-size: 1.8rem;
+        margin-top: 5.5rem;
+      }
+
+      &__text {
+        color: $text-grey-color;
+        font-size: 1.6rem;
+        line-height: 1.5;
+        margin-top: 2rem;
+      }
+
+      & + .card {
+        margin-top: 9rem;
+      }
+    }
+  }
+
+  &__info {
+    flex: 0 0 50%;
+    padding-left: 20rem;
+    padding-top: 10rem;
+  }
+
+  &__title {
+    font-size: 4rem;
+    max-width: 50rem;
+  }
+
+  &__text {
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.875;
+    color: $text-grey-color;
+    max-width: 50rem;
+    margin-top: 6rem;
+    margin-bottom: 10rem;
+  }
+
+  &__object {
+    background-image: url(../img/objects/about-object.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 1800px;
+    height: 1800px;
+    // width: 1600px;
+    // height: 1600px;
+    position: absolute;
+    // left: -595px;
+    right: 400px;
+    top: -460px;
+    z-index: -1;
   }
 }
