--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -66,12 +66,11 @@
     height: 100%;
     background-image: url(../img/objects/header-object.svg);
     background-repeat: no-repeat;
-    // background-position: -94rem -166rem;
-    // background-position: -131rem -166rem;
-    background-position: 82% 90%;
+    // background-position: 82% 90%;
+    background-position: 82% -165rem;
 
     @media screen and(max-width: 1440px) {
-      background-position: 81% 100%;
+      background-position: 81% -185rem;
     }
   }
 }
@@ -162,6 +161,10 @@
   position: relative;
   margin-top: 20rem;
 
+  @media screen and(max-width: 1440px) {
+    margin-top: 0;
+  }
+
   .container {
     display: flex;
   }
@@ -240,12 +243,13 @@
     background-size: contain;
     width: 1800px;
     height: 1800px;
-    // width: 1600px;
-    // height: 1600px;
     position: absolute;
-    // left: -595px;
-    right: 400px;
+    left: -88rem;
     top: -460px;
     z-index: -1;
+
+    @media screen and(max-width: 1440px) {
+      left: -90rem;
+    }
   }
 }
