solutions section finished

--- a/scss/base/_helpers.scss
+++ b/scss/base/_helpers.scss
@@ -16,3 +16,14 @@
 .position-relative {
   position: relative;
 }
+
+.u-title-primary {
+  font-size: 4rem;
+}
+
+.u-text-primary {
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.875;
+  color: $text-grey-color;
+}
