--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -15,3 +15,16 @@ $border-grey-color: #DCDFE8;
 $text-grey-color: #8F909B;
 $slider-bullet-grey: #B4B7BF;
 $main-red-color: #E03852;
+
+
+$step-bg-color-1: #E7F7F6;
+$step-bg-color-2: #FCEAED;
+$step-bg-color-3: #F4E9F5;
+$step-bg-color-4: #F1F5FF;
+$step-bg-color-5: #FAECF9;
+
+$step-text-color-1: #4BBEB7;
+$step-text-color-2: #E03852;
+$step-text-color-3: #892D92;
+$step-text-color-4: #7BA0FF;
+$step-text-color-5: #C744C2;
