scroll based animation added to solutions block

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -344,10 +344,9 @@
         bottom: -4rem;
         left: 32%;
         font-size: 24px;
-        color: $main-bg-color;
+        color: $border-grey-color;
         letter-spacing: 5px;
         transform: rotate(90deg);
-        // background-image: url(../img/objects/dots.svg);
         background-repeat: no-repeat;
         background-size: contain;
       }
