--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -15,6 +15,7 @@ $border-grey-color: #DCDFE8;
 $text-grey-color: #8F909B;
 $slider-bullet-grey: #B4B7BF;
 $main-red-color: #E03852;
+$primary-pink-color: #F5C2CA;
 
 
 $step-bg-color-1: #E7F7F6;
@@ -28,3 +29,17 @@ $step-text-color-2: #E03852;
 $step-text-color-3: #892D92;
 $step-text-color-4: #7BA0FF;
 $step-text-color-5: #C744C2;
+
+
+// $model-red-primary-color: #DF3851; 
+$model-red-color: #FCEAED; 
+// $model-purple-primary-color: #C843C1; 
+$model-purple-color: #FAECF9; 
+// $model-green-primary-color: #16AFA9; 
+$model-green-color: #E7F7F6; 
+// $model-blue-primary-color: #7BA0FF; 
+$model-blue-color: #F1F5FF; 
+// $model-darkpurple-primary-color: #90289A; 
+$model-darkpurple-color: #F4E9F5; 
+// $model-yellow-primary-color: #F7B132; 
+$model-yellow-color: #FEF6E5; 
