footer section added

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -13,6 +13,8 @@ $text-secondary-color: #171A30;
 $main-bg-color: #EEF2F8;
 $border-grey-color: #DCDFE8;
 $text-grey-color: #8F909B;
+$text-grey-secondary-color: #B2B1BB;
+$placeholder-grey-color: #9A9AA7;
 $slider-bullet-grey: #B4B7BF;
 $main-red-color: #E03852;
 $primary-pink-color: #F5C2CA;
@@ -31,15 +33,9 @@ $step-text-color-4: #7BA0FF;
 $step-text-color-5: #C744C2;
 
 
-// $model-red-primary-color: #DF3851; 
 $model-red-color: #FCEAED; 
-// $model-purple-primary-color: #C843C1; 
 $model-purple-color: #FAECF9; 
-// $model-green-primary-color: #16AFA9; 
 $model-green-color: #E7F7F6; 
-// $model-blue-primary-color: #7BA0FF; 
 $model-blue-color: #F1F5FF; 
-// $model-darkpurple-primary-color: #90289A; 
 $model-darkpurple-color: #F4E9F5; 
-// $model-yellow-primary-color: #F7B132; 
 $model-yellow-color: #FEF6E5; 
