--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,3 +1,168 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the footer of the site/application.
 // -----------------------------------------------------------------------------
+
+.footer {
+  padding-top: 51rem;
+  margin-top: -30rem;
+  overflow: hidden;
+  background-image: url(../img/objects/footer-object-2.svg);
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: left 8.3% bottom 141%;
+
+  &__link {
+    display: inline-block;
+    width: 11.5rem;
+    margin-bottom: 14rem;
+  }
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 9rem;
+  }
+
+  .nav {
+    display: flex;
+    &__col {
+      & + .nav__col {
+        margin-left: 12rem;
+      }
+    }
+
+    &__title {
+      font-size: 2rem;
+      font-weight: 400;
+      margin-bottom: 4.5rem;
+      color: #fff;
+    }
+
+    &__link {
+      display: block;
+      font-size: 1.6rem;
+      color: $text-grey-secondary-color;
+
+      & + .nav__link {
+        margin-top: 2.5rem;
+      }
+    }
+  }
+
+  &__title {
+    font-size: 4rem;
+    color: #fff;
+    font-weight: 700;
+    margin-bottom: 6rem;
+  }
+
+  .form {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    &__input {
+      width: 56rem;
+      font-family: inherit;
+
+      height: 8rem;
+      padding: 0 4rem;
+      border-radius: 4.2rem;
+      border: 1px solid $text-grey-color;
+      background-color: transparent;
+      line-height: 8rem;
+      font-size: 1.6rem;
+      color: $placeholder-grey-color;
+
+      &:focus {
+        outline: none;
+      }
+    }
+
+    &__btn {
+      height: 8rem;
+      width: 8rem;
+      border-radius: 50%;
+      margin-left: 4rem;
+      background-color: $main-red-color;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      outline: none;
+      border: none;
+      cursor: pointer;
+    }
+
+    &__icon {
+      width: 3.5rem;
+      height: 3.5rem;
+      fill: #fff;
+    }
+  }
+
+  &__info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__copyright {
+    font-size: 1.6rem;
+    color: $text-grey-secondary-color;
+  }
+
+  &__contacts {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  &__contact {
+    display: flex;
+    align-items: center;
+
+    & + .footer__contact {
+      margin-left: 8rem;
+    }
+
+    &--phone {
+      .footer__icon {
+        height: 2.6rem;
+        width: 1.8rem;
+      }
+    }
+
+    &--email {
+      .footer__icon {
+        width: 2.7rem;
+      }
+    }
+  }
+
+  &__value {
+    margin-left: 2rem;
+    color: $text-grey-secondary-color;
+  }
+
+  &__circle {
+    width: 175.5rem;
+    height: 175.5rem;
+    position: absolute;
+    top: 31%;
+    left: -88%;
+    z-index: -2;
+
+    &::after {
+      content: '';
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      top: -35%;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      border-radius: 50%;
+      background-color: #F6C3CA;
+    }
+  }
+}
