modal and forms added

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -18,6 +18,9 @@ $placeholder-grey-color: #9A9AA7;
 $slider-bullet-grey: #B4B7BF;
 $main-red-color: #E03852;
 $primary-pink-color: #F5C2CA;
+$input-border-color: #B1B0BB;
+$input-focus-color: #787688;
+$input-text-color: #C1C0C9;
 
 
 $step-bg-color-1: #E7F7F6;
