--- a/scss/base/_helpers.scss
+++ b/scss/base/_helpers.scss
@@ -27,3 +27,24 @@
   line-height: 1.875;
   color: $text-grey-color;
 }
+
+.flex-apart {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+$spaceamounts: (5, 10, 15, 20, 24, 25, 30, 35, 40, 45, 50, 60, 75, 100);
+$sides: (top, bottom, left, right);
+
+@each $space in $spaceamounts {
+  @each $side in $sides {
+    .m#{str-slice($side, 0, 1)}-#{$space} {
+      margin-#{$side}: #{$space}px !important;
+    }
+
+    .p#{str-slice($side, 0, 1)}-#{$space} {
+      padding-#{$side}: #{$space}px !important;
+    }
+  }
+}
