--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -4,7 +4,6 @@
 
 .footer {
   padding-top: 51rem;
-  margin-top: -30rem;
   overflow: hidden;
   background-image: url(../img/objects/footer-object-2.svg);
   background-repeat: no-repeat;
@@ -61,22 +60,22 @@
     align-items: center;
     justify-content: flex-end;
 
-    &__input {
+    &__group {
       width: 56rem;
-      font-family: inherit;
+      // font-family: inherit;
 
-      height: 8rem;
-      padding: 0 4rem;
-      border-radius: 4.2rem;
-      border: 1px solid $text-grey-color;
+      // height: 8rem;
+      // padding: 0 4rem;
+      // border-radius: 4.2rem;
+      // border: 1px solid $text-grey-color;
       background-color: transparent;
-      line-height: 8rem;
-      font-size: 1.6rem;
-      color: $placeholder-grey-color;
+      // line-height: 8rem;
+      // font-size: 1.6rem;
+      // color: $placeholder-grey-color;
 
-      &:focus {
-        outline: none;
-      }
+      // &:focus {
+      //   outline: none;
+      // }
     }
 
     &__btn {
