--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,11 +16,14 @@
 // 4. Layout-related sections
 @import
   'layout/header',
-  'layout/footer';
+  'layout/footer',
+  'layout/grid';
 
 // 5. Components
 @import
-  'components/button';
+  'components/button',
+  'components/form',
+  'components/modal';
 
 // 6. Page-specific styles
 @import
