header changed and file upload input added

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -21,6 +21,7 @@ $primary-pink-color: #F5C2CA;
 $input-border-color: #B1B0BB;
 $input-focus-color: #787688;
 $input-text-color: #C1C0C9;
+$input-icon-color: #cdccd3;
 
 
 $step-bg-color-1: #E7F7F6;
