--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -176,7 +176,72 @@
       background-size: contain;
     }
   }
+
+  &__upload {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 4.2rem;
+    width: 100%;
+    padding: 1rem 4rem;
+    height: 8rem;
+    font-family: inherit;
+    font-size: 1.6rem;
+    color: $text-primary-color;
+    border: 1px solid $input-border-color;
+    
+    label {
+      background-color: transparent;
+      width: 2.5rem;
+      height: 2.5rem;
+      font-family: inherit;
+      cursor: pointer;
+    }
+    
+    #file-chosen{
+      margin-left: 0.3rem;
+      font-family: sans-serif;
+    }
+
+    &--uploaded {
+      border-color: $input-focus-color;
+
+      label {
+        display: none;
+      }
+
+      .form__remove {
+        display: block;
+      }
+      .form__filename {
+        color: $text-primary-color;
+      }
+    }
+  }
+
+  &__remove {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    width: 2.5rem;
+    height: 2.5rem;
+    cursor: pointer;
+    display: none;
+    
+    .form__icon {
+      fill: $text-primary-color;
+    }
+  }
+
+  &__filename {
+    font-size: 1.6rem;
+    color: $input-text-color;
+  }
+
+  &__icon {
+    height: 2.5rem;
+    width: 2.5rem;
+    fill: $input-icon-color;
+  }
 }
 
-.styled-checkbox {
-}
