--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -5,8 +5,9 @@
 
 .header {
   height: 18.3rem;
-  position: relative;
+  position: fixed;
   z-index: 10;
+  width: 100vw;
 
   .container {
     height: 100%;
@@ -57,5 +58,10 @@
         transition: all .25s ease-in-out;
       }
     }
+  }
+
+  &--white {
+    background-color: #fff;
+    box-shadow: 0 10px 40px rgba(black, .06);
   }
 }
