checkbox size fixed

--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -93,11 +93,10 @@
       input.form__input[type='text'],
       input.form__input[type='email'],
       textarea.form__textarea {
-        background-color: #3F3D56;
+        background-color: #3f3d56;
         color: $input-text-color;
 
         + label.form__label[data-placeholder] {
-  
           &:after {
             content: attr(data-placeholder);
             display: block;
@@ -107,10 +106,9 @@
             transform: translate(0%, -50%);
             transition: all 0.3s ease-in-out;
             padding: 0 5px;
-            background-color: #3F3D56 !important;
+            background-color: #3f3d56 !important;
           }
         }
-
       }
     }
   }
@@ -130,6 +128,8 @@
       position: relative;
       cursor: pointer;
       padding: 0;
+      display: flex;
+      align-items: center;
     }
 
     // Box.
@@ -138,8 +138,8 @@
       margin-right: 2rem;
       display: inline-block;
       vertical-align: text-top;
-      width: 2rem;
-      height: 2rem;
+      width: 2.4rem;
+      height: 2.4rem;
       background: transparent;
       border: 1px solid #b1b0bb;
       border-radius: 6px;
@@ -167,10 +167,10 @@
     &:checked + label:after {
       content: '';
       position: absolute;
-      left: 0.4rem;
-      top: 0.5rem;
-      width: 1.3rem;
-      height: 1.3rem;
+      left: 5px;
+      top: 6px;
+      width: 15px;
+      height: 12px;
       background-image: url(../img/icons/checkmark.svg);
       background-repeat: no-repeat;
       background-size: contain;
@@ -189,7 +189,7 @@
     font-size: 1.6rem;
     color: $text-primary-color;
     border: 1px solid $input-border-color;
-    
+
     label {
       background-color: transparent;
       width: 2.5rem;
@@ -197,8 +197,8 @@
       font-family: inherit;
       cursor: pointer;
     }
-    
-    #file-chosen{
+
+    #file-chosen {
       margin-left: 0.3rem;
       font-family: sans-serif;
     }
@@ -227,7 +227,7 @@
     height: 2.5rem;
     cursor: pointer;
     display: none;
-    
+
     .form__icon {
       fill: $text-primary-color;
     }
@@ -244,4 +244,3 @@
     fill: $input-icon-color;
   }
 }
-
