--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -4,7 +4,7 @@
 
 // Main Section
 .main {
-  height: 1236px;
+  height: 123rem;
   position: relative;
   padding-top: 12rem;
 }
@@ -32,7 +32,7 @@
 
       @media screen and (max-width: 1440px) {
         right: -33%;
-        top: -38%;
+        top: -34%;
       }
     }
   }
@@ -71,7 +71,8 @@
     background-position: 82% -165rem;
 
     @media screen and(max-width: 1440px) {
-      background-position: 81% -185rem;
+      // background-position: 77% -195rem;
+      background-position: 77% -220rem;
     }
   }
 }
@@ -159,10 +160,15 @@
 
 // About Section
 .about {
-  margin-top: 20rem;
+  // margin-top: 20rem;
+  overflow: hidden;
+  padding-top: 32rem;
+  padding-bottom: 32rem;
+  margin-top: -15rem;
 
   @media screen and(max-width: 1440px) {
-    margin-top: 0;
+    padding-top: 26rem;
+    margin-top: -35rem;
   }
 
   .container {
@@ -236,11 +242,11 @@
     background-image: url(../img/objects/about-object.svg);
     background-repeat: no-repeat;
     background-size: contain;
-    width: 1800px;
-    height: 1800px;
+    width: 180rem;
+    height: 180rem;
     position: absolute;
     left: -88rem;
-    top: -460px;
+    top: -46rem;
     z-index: -1;
 
     @media screen and(max-width: 1440px) {
@@ -250,8 +256,12 @@
 }
 
 .solutions {
-  margin-top: 10rem;
-  margin-bottom: 4rem;
+  // margin-top: 10rem;
+  // margin-bottom: 4rem;
+  margin-top: -70rem;
+  overflow: hidden;
+  padding-top: 42rem;
+  padding-bottom: 34rem;
   .container {
     display: flex;
   }
@@ -327,11 +337,25 @@
     &__circle {
       width: 8rem;
       height: 8rem;
+      // width: 80px;
+      // height: 80px;
       position: relative;
       border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
+
+      @media screen and (max-width: 1440px) {
+        svg {
+          height: 8rem;
+          width: 8rem;
+          circle {
+            r: calc(4rem - 2px);
+            cx: 64;
+            cy: 36;
+          }
+        }
+      }
 
       &::after {
         content: '........';
@@ -340,7 +364,7 @@
         width: 2px;
         bottom: -4rem;
         left: 32%;
-        font-size: 24px;
+        font-size: 2.4rem;
         color: $border-grey-color;
         letter-spacing: 5px;
         transform: rotate(90deg);
@@ -377,15 +401,15 @@
     background-image: url(../img/objects/solutions-object.svg);
     background-repeat: no-repeat;
     background-size: contain;
-    width: 1800px;
-    height: 1800px;
+    width: 180rem;
+    height: 180rem;
     position: absolute;
     right: -79rem;
     top: -38rem;
     z-index: -1;
 
     @media screen and(max-width: 1440px) {
-      left: -90rem;
+      right: -83rem;
     }
   }
 
@@ -413,8 +437,12 @@
 }
 
 .agile {
-  margin-top: 60rem;
-  margin-bottom: 20rem;
+  // margin-top: 60rem;
+  // margin-bottom: 20rem;
+  overflow: hidden;
+  padding-top: 68rem;
+  padding-bottom: 55rem;
+  margin-top: -47rem;
 
   &__heading {
     display: flex;
@@ -586,11 +614,11 @@
 
 // Projects
 .projects {
-  margin-top: 95rem;
-
-  @media screen and(max-width: 1440px) {
-    margin-top: 0;
-  }
+  // margin-top: 95rem;
+  overflow: hidden;
+  padding-top: 54rem;
+  padding-bottom: 30rem;
+  margin-top: -20rem;
 
   .container {
     display: flex;
@@ -646,7 +674,7 @@
     &:hover {
       .projects__icon {
         transform: translateX(3px);
-        transition: all .3s ease-in-out;
+        transition: all 0.3s ease-in-out;
       }
     }
   }
@@ -655,31 +683,31 @@
     width: 2rem;
     margin-left: 1rem;
     fill: $main-red-color;
-    transition: all .3s ease-in-out;
+    transition: all 0.3s ease-in-out;
   }
 
   &__object {
     background-image: url(../img/objects/projects-object.svg);
     background-repeat: no-repeat;
     background-size: contain;
-    width: 1800px;
-    height: 1800px;
+    width: 180rem;
+    height: 180rem;
     position: absolute;
     left: -83rem;
     top: -69rem;
     z-index: -1;
-
-    @media screen and(max-width: 1440px) {
-      left: -90rem;
-    }
   }
 }
 
-
 // Team Section
 .team {
-  margin-top: 20rem;
-  margin-bottom: -34rem;
+  // margin-top: 20rem;
+  // margin-bottom: -34rem;
+  overflow: hidden;
+  padding-top: 38rem;
+  padding-bottom: 33rem;
+  margin-top: -45rem;
+  margin-bottom: -60rem;
   .container {
     display: flex;
   }
@@ -714,10 +742,6 @@
         border-radius: 50%;
         background-repeat: no-repeat;
         margin-right: 7rem;
-      }
-
-      &__info {
-
       }
 
       &__title {
@@ -773,15 +797,15 @@
     background-image: url(../img/objects/team-object.svg);
     background-repeat: no-repeat;
     background-size: contain;
-    width: 1800px;
-    height: 1800px;
+    width: 180rem;
+    height: 180rem;
     position: absolute;
     right: -72rem;
     top: -32rem;
     z-index: -1;
 
-    @media screen and(max-width: 1440px) {
-      left: -90rem;
+    @media screen and (max-width: 1440px) {
+      right: -79rem;
     }
   }
 
