--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -9,3 +9,31 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+
+@mixin respond ($breakpoint) {
+  @if $breakpoint == small-phone {
+    @media (max-width: 21em) {@content};    //320px
+  }
+  @if $breakpoint == phone {
+    @media (max-width: 37.5em) {@content};    //600px
+  }
+  @if $breakpoint == tab-port {
+    @media (max-width: 64.5em) {@content};    //900px
+  }
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em) {@content};    //1200px
+  }
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em) {@content};    //1200px
+  }
+  @if $breakpoint == laptop {
+    @media (max-width: 90em) {@content};    //1440px
+  }
+  @if $breakpoint == laptop-hq {
+    @media (max-width: 96em) {@content};    //1536px
+  }
+  @if $breakpoint == big-desktop {
+    @media (min-width: 112.5em) {@content};    //1800px
+  }
+}
