--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -11,8 +11,12 @@
   background-position: left 8.3% bottom 141%;
   position: relative;
 
-  @media screen and (max-width: 1440px) {
+  @include respond(laptop) {
     background-position: left 12.3% bottom 128%;
+  }
+
+  @media screen and (max-width: 1537px) {
+    background-position: left 14.3% bottom 141%;
   }
 
   &__link {
