--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -31,7 +31,7 @@
     @media (max-width: 90em) {@content};    //1440px
   }
   @if $breakpoint == laptop-hq {
-    @media (max-width: 96em) {@content};    //1536px
+    @media (max-width: 103.75) {@content};    //1660px
   }
   @if $breakpoint == big-desktop {
     @media (min-width: 112.5em) {@content};    //1800px
