--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -5,7 +5,7 @@ html {
   box-sizing: border-box;
   font-size: 62.5%; // 1rem = 10px
 
-  @media screen and (max-width: 1440px) {
+  @include respond(laptop) {
     font-size: 56.5%;
   }
 }
