--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -160,6 +160,13 @@
     left: -88%;
     z-index: -2;
 
+    @include respond(laptop-hq) {
+      width: 140rem;
+      height: 140rem;
+      top: 45%;
+      left: -61%;
+    }
+
     &::after {
       content: '';
       position: absolute;
@@ -170,7 +177,7 @@
       bottom: 0;
       right: 0;
       border-radius: 50%;
-      background-color: #F6C3CA;
+      background-color: #f6c3ca;
     }
   }
 
@@ -182,7 +189,7 @@
       content: '';
       position: absolute;
       border-radius: 50%;
-      background-color: #F6C3CA;
+      background-color: #f6c3ca;
       height: 1660px;
       width: 1660px;
       left: -42%;
@@ -194,7 +201,7 @@
       content: '';
       position: absolute;
       border-radius: 50%;
-      background-color: #892D92;
+      background-color: #892d92;
       height: 1660px;
       width: 1660px;
       right: -50%;
