--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -35,7 +35,7 @@
 
       @include respond(laptop-hq) {
         right: -33%;
-        top: -38%;
+        top: -30%;
       }
 
       @include respond(laptop) {
@@ -60,7 +60,7 @@
       width: 150rem;
       position: absolute;
       right: -88%;
-      top: -152%;
+      top: -170%;
       border-radius: 50%;
       background-color: rgba(#f6c3ca, 0.8);
 
@@ -83,10 +83,10 @@
     background-image: url(../img/objects/header-object.svg);
     background-repeat: no-repeat;
     // background-position: 82% 90%;
-    background-position: 82% -165rem;
+    background-position: 86% -165rem;
 
     @include respond(laptop-hq) {
-      background-position: 76% -189rem;
+      background-position: 76% -185rem;
     }
     @include respond(laptop) {
       background-position: 77% -220rem;
@@ -184,14 +184,14 @@
   margin-top: -15rem;
 
   @include respond(laptop-hq) {
-    padding-top: 26rem;
-    margin-top: -33rem;
+    padding-top: 25rem;
+    margin-top: -34rem;
   }
 
-  @include respond(laptop) {
-    padding-top: 26rem;
-    margin-top: -35rem;
-  }
+  // @include respond(laptop) {
+  //   padding-top: 26rem;
+  //   margin-top: -35rem;
+  // }
 
   .container {
     display: flex;
@@ -200,12 +200,15 @@
     flex: 0 0 50%;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
 
     .cards-group {
       display: flex;
       flex-direction: column;
       margin-right: 9rem;
+
+      @include respond(laptop-hq) {
+        margin-right: 7.2rem;
+      }
     }
 
     .card {
@@ -221,14 +224,30 @@
       justify-content: center;
       align-items: flex-start;
 
+      @include respond(laptop-hq) {
+        padding: 3.4rem;
+        padding-left: 4rem;
+        width: 22.4rem;
+        min-height: 30.8rem;
+      }
+
       &__image {
         width: 10rem;
+
+        @include respond(laptop-hq) {
+          width: 8rem;
+        }
       }
 
       &__title {
         color: $text-secondary-color;
         font-size: 1.8rem;
         margin-top: 5.5rem;
+
+        @include respond(laptop-hq) {
+          font-size: 1.6rem;
+          margin-top: 4.4rem;
+        }
       }
 
       &__text {
@@ -236,10 +255,18 @@
         font-size: 1.6rem;
         line-height: 1.5;
         margin-top: 2rem;
+
+        @include respond(laptop-hq) {
+          font-size: 1.4rem;
+        }
       }
 
       & + .card {
         margin-top: 9rem;
+
+        @include respond(laptop-hq) {
+          margin-top: 7.5rem;
+        }
       }
     }
   }
@@ -250,6 +277,12 @@
     padding-top: 10rem;
   }
 
+  &__title {
+    @include respond(laptop-hq) {
+      font-size: 3.6rem;
+    }
+  }
+
   &__title,
   &__text {
     max-width: 50rem;
@@ -258,6 +291,11 @@
   &__text {
     margin-top: 6rem;
     margin-bottom: 10rem;
+
+    @include respond(laptop-hq) {
+      margin-top: 4.8rem;
+      margin-bottom: 8rem;
+    }
   }
 
   &__object {
@@ -267,12 +305,15 @@
     width: 180rem;
     height: 180rem;
     position: absolute;
-    left: -88rem;
+    left: -90rem;
     top: -46rem;
     z-index: -1;
 
-    @include respond(laptop) {
-      left: -90rem;
+    @include respond(laptop-hq) {
+      width: 144rem;
+      height: 144rem;
+      left: -71.5rem;
+      top: -38rem;
     }
   }
 }
@@ -284,6 +325,11 @@
   overflow: hidden;
   padding-top: 42rem;
   padding-bottom: 34rem;
+
+  @include respond(laptop-hq) {
+    margin-top: -62rem;
+    padding-top: 40rem;
+  }
   .container {
     display: flex;
   }
@@ -315,9 +361,14 @@
     &__step {
       display: flex;
       justify-content: flex-end;
+      align-items: center;
 
       & + .steps__step {
         margin-top: 7rem;
+
+        @include respond(laptop-hq) {
+          margin-top: 5.6rem;
+        }
       }
 
       &--1 {
@@ -359,22 +410,22 @@
     &__circle {
       width: 8rem;
       height: 8rem;
-      // width: 80px;
-      // height: 80px;
       position: relative;
       border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
 
-      @include respond(laptop) {
+      @include respond(laptop-hq) {
+        width: 6.4rem;
+        height: 6.4rem;
         svg {
-          height: 8rem;
-          width: 8rem;
+          height: 6.4rem;
+          width: 6.4rem;
           circle {
-            r: calc(4rem - 2px);
-            cx: 64;
-            cy: 36;
+            r: calc(3.2rem - 2px);
+            cx: 68;
+            cy: 33;
           }
         }
       }
@@ -392,6 +443,10 @@
         transform: rotate(90deg);
         background-repeat: no-repeat;
         background-size: contain;
+
+        @include respond(laptop-hq) {
+          letter-spacing: 4px;
+        }
       }
     }
 
@@ -409,6 +464,10 @@
     &__title {
       font-size: 2rem;
       font-weight: 400;
+
+      @include respond(laptop-hq) {
+        font-size: 1.8rem;
+      }
     }
 
     &__text {
@@ -416,6 +475,11 @@
       margin-top: 2rem;
       color: $text-grey-color;
       line-height: 1.875;
+
+      @include respond(laptop-hq) {
+        font-size: 1.4rem;
+        margin-top: 1.8rem;
+      }
     }
   }
 
@@ -430,8 +494,11 @@
     top: -38rem;
     z-index: -1;
 
-    @include respond(laptop) {
-      right: -83rem;
+    @include respond(laptop-hq) {
+      width: 144rem;
+      height: 144rem;
+      right: -53rem;
+      top: -28rem;
     }
   }
 
@@ -442,6 +509,12 @@
     top: 0;
     right: -75%;
     z-index: -2;
+
+    @include respond(laptop-hq) {
+      width: 98rem;
+      height: 98rem;
+      right: -55%;
+    }
 
     &::after {
       content: '';
@@ -459,18 +532,25 @@
 }
 
 .agile {
-  // margin-top: 60rem;
-  // margin-bottom: 20rem;
   overflow: hidden;
   padding-top: 68rem;
   padding-bottom: 55rem;
   margin-top: -47rem;
+
+  @include respond(laptop-hq) {
+    margin-top: -62rem;
+  }
 
   &__heading {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 14.5rem;
+
+    @include respond(laptop-hq) {
+      margin-bottom: 11rem;
+      padding: 0 6rem;
+    }
   }
 
   &__title {
@@ -478,16 +558,28 @@
     font-size: 20vh;
     font-weight: 700;
     max-width: 60%;
+
+    @include respond(laptop-hq) {
+      font-size: 16vh;
+    }
   }
 
   &__img {
     width: 39.5rem;
+
+    @include respond(laptop-hq) {
+      width: 31rem;
+    }
   }
 
   .model {
     &__heading {
       font-size: 4rem;
       margin-left: 13.2rem;
+
+      @include respond(laptop-hq) {
+        font-size: 3.2rem;
+      }
     }
 
     &__container {
@@ -510,6 +602,11 @@
       padding: 3px;
       margin-right: 5.5rem;
 
+      // @include respond(laptop-hq) {
+      //   flex: 0 0 6rem;
+      //   height: 6rem;
+      // }
+
       &::before {
         content: '';
         position: absolute;
@@ -519,8 +616,13 @@
         width: 6.3rem;
         border-radius: 14px;
         transform: rotate(16deg);
-        // z-index: -1;
         transition: all 0.2s ease-in-out;
+
+        // @include respond(laptop-hq) {
+        //   height: 5rem;
+        //   width: 5rem;
+        //   border-radius: 12px;
+        // }
       }
 
       &:hover {
@@ -591,12 +693,22 @@
     &__title {
       font-size: 2rem;
       font-weight: 400;
+
+      @include respond(laptop-hq) {
+        font-size: 1.8rem;
+      }
     }
 
     &__text {
       font-size: 1.6rem;
       color: $text-grey-color;
       margin-top: 2rem;
+
+      @include respond(laptop-hq) {
+        font-size: 1.4rem;
+        margin-top: 1.8rem;
+        line-height: 1.5;
+      }
     }
   }
 
@@ -611,6 +723,13 @@
     right: -37%;
     top: -45%;
     z-index: -1;
+
+    @include respond(laptop-hq) {
+      width: 220rem;
+      height: 220rem;
+      right: -28%;
+      top: -44%;
+    }
   }
 
   &__circle {
@@ -620,6 +739,12 @@
     top: 0;
     left: -75%;
     z-index: -2;
+
+    @include respond(laptop-hq) {
+      width: 125rem;
+      height: 125rem;
+      left: -51%;
+    }
 
     &::after {
       content: '';
@@ -644,6 +769,10 @@
   padding-bottom: 30rem;
   margin-top: -20rem;
 
+  @include respond(laptop-hq) {
+    margin-top: -30rem;
+  }
+
   .container {
     display: flex;
   }
@@ -651,7 +780,14 @@
   &__cards {
     display: grid;
     grid-template-columns: 28rem 28rem;
-    grid-gap: 9rem;
+    column-gap: 9rem;
+    row-gap: 9rem;
+
+    @include respond(laptop-hq) {
+      grid-template-columns: 22.4rem 22.4rem;
+      column-gap: 7rem;
+      row-gap: 6rem;
+    }
 
     .card {
       height: 28rem;
@@ -661,9 +797,18 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      overflow: hidden;
+
+      @include respond(laptop-hq) {
+        height: 22.4rem;
+      }
 
       &:nth-child(odd) {
         margin-top: -13rem;
+
+        @include respond(laptop-hq) {
+          margin-top: -9rem;
+        }
       }
 
       &__image {
@@ -686,6 +831,11 @@
   &__text {
     margin-top: 6rem;
     margin-bottom: 10rem;
+
+    @include respond(laptop-hq) {
+      margin-top: 4.8rem;
+      margin-bottom: 6rem;
+    }
   }
 
   &__link {
@@ -720,18 +870,28 @@
     left: -83rem;
     top: -69rem;
     z-index: -1;
+
+    @include respond(laptop-hq) {
+      width: 144rem;
+      height: 144rem;
+      left: -66rem;
+      top: -54rem;
+    }
   }
 }
 
 // Team Section
 .team {
-  // margin-top: 20rem;
-  // margin-bottom: -34rem;
   overflow: hidden;
   padding-top: 38rem;
   padding-bottom: 33rem;
   margin-top: -45rem;
   margin-bottom: -60rem;
+
+  @include respond(laptop-hq) {
+    margin-top: -50rem;
+    margin-bottom: -60rem;
+  }
   .container {
     display: flex;
   }
@@ -766,16 +926,30 @@
         border-radius: 50%;
         background-repeat: no-repeat;
         margin-right: 7rem;
+
+        @include respond(laptop-hq) {
+          flex: 0 0 22rem;
+          height: 22rem;
+          margin-right: 5rem;
+        }
       }
 
       &__title {
         font-size: 2rem;
+
+        @include respond(laptop-hq) {
+          font-size: 1.8rem;
+        }
       }
 
       &__subtitle {
         font-size: 1.5rem;
         color: $text-grey-color;
         margin-top: 1rem;
+
+        @include respond(laptop-hq) {
+          font-size: 1.4rem;
+        }
       }
 
       &__details {
@@ -783,10 +957,18 @@
         line-height: 1.875;
         color: $text-grey-color;
         margin-top: 2.4rem;
+
+        @include respond(laptop-hq) {
+          font-size: 1.4rem;
+        }
       }
 
       & + .card {
         margin-top: 8rem;
+
+        @include respond(laptop-hq) {
+          margin-top: 4rem;
+        }
       }
 
       &--right {
@@ -795,6 +977,10 @@
         .card__img {
           margin-right: 0;
           margin-left: 7rem;
+
+          @include respond(laptop-hq) {
+            margin-left: 5rem;
+          }
         }
 
         .card__info {
@@ -828,8 +1014,11 @@
     top: -32rem;
     z-index: -1;
 
-    @include respond(laptop) {
-      right: -79rem;
+    @include respond(laptop-hq) {
+      width: 144rem;
+      height: 144rem;
+      right: -52rem;
+      top: -29rem;
     }
   }
 
@@ -840,6 +1029,13 @@
     top: 17%;
     right: -83%;
     z-index: -2;
+
+    @include respond(laptop-hq) {
+      height: 124rem;
+      width: 124rem;
+      top: 12%;
+      right: -62%;
+    }
 
     &::after {
       content: '';
