--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -5,9 +5,9 @@ html {
   box-sizing: border-box;
   font-size: 62.5%; // 1rem = 10px
 
-  @include respond(laptop) {
-    font-size: 56.5%;
-  }
+  // @include respond(laptop) {
+  //   font-size: 56.5%;
+  // }
 }
 
 *, *:before, *:after {
