--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -60,32 +60,23 @@
     margin-bottom: 6rem;
   }
 
+  &__form {
+    width: 56rem;
+  }
+
   .form {
     display: flex;
     align-items: center;
     justify-content: flex-end;
 
     &__group {
-      width: 56rem;
-      // font-family: inherit;
-
-      // height: 8rem;
-      // padding: 0 4rem;
-      // border-radius: 4.2rem;
-      // border: 1px solid $text-grey-color;
       background-color: transparent;
-      // line-height: 8rem;
-      // font-size: 1.6rem;
-      // color: $placeholder-grey-color;
-
-      // &:focus {
-      //   outline: none;
-      // }
+      width: 100%;
     }
 
     &__btn {
+      flex: 0 0 8rem;
       height: 8rem;
-      width: 8rem;
       border-radius: 50%;
       margin-left: 4rem;
       background-color: $main-red-color;
