--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -28,6 +28,7 @@
 
     &__link {
       // font-size: 2rem;
+      color: inherit;
       position: relative;
       font-size: 1vw;
       font-family: inherit;
