--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -25,22 +25,30 @@
 
     &::before {
       content: '';
-      height: 150rem;
-      width: 150rem;
+      // height: 150rem;
+      // width: 150rem;
+      height: 295rem;
+      width: 295rem;
       position: absolute;
-      right: -30%;
-      top: -27%;
+      // right: -30%;
+      // top: -27%;
+      right: -65%;
+      bottom: 53%;
       border-radius: 50%;
       background-color: $main-red-color;
 
       @include respond(laptop-hq) {
-        right: -33%;
-        top: -30%;
+        // right: -33%;
+        // top: -30%;
+        right: -71%;
+        bottom: 58%;
       }
 
       @include respond(laptop) {
-        right: -33%;
-        top: -38%;
+        // right: -33%;
+        // top: -38%;
+        right: -71%;
+        bottom: 63%;
       }
     }
   }
@@ -56,22 +64,30 @@
 
     &::before {
       content: '';
-      height: 150rem;
-      width: 150rem;
+      // height: 150rem;
+      // width: 150rem;
+      height: 208rem;
+      width: 208rem;
       position: absolute;
-      right: -88%;
-      top: -170%;
+      // right: -88%;
+      // top: -170%;
+      bottom: 10%;
+      left: -12%;
       border-radius: 50%;
       background-color: rgba(#f6c3ca, 0.8);
 
       @include respond(laptop-hq) {
-        right: -115%;
-        top: -165%;
+        // right: -115%;
+        // top: -165%;
+        bottom: 23%;
+        left: 6%;
       }
 
       @include respond(laptop) {
-        right: -119%;
-        top: -169%;
+        // right: -119%;
+        // top: -169%;
+        bottom: 24%;
+        left: 22%;
       }
     }
   }
@@ -730,6 +746,13 @@
       right: -28%;
       top: -44%;
     }
+
+    @include respond(laptop) {
+      width: 187.5rem;
+      height: 187.5rem;
+      top: -36%;
+      right: -28%;
+    }
   }
 
   &__circle {
@@ -763,7 +786,6 @@
 
 // Projects
 .projects {
-  // margin-top: 95rem;
   overflow: hidden;
   padding-top: 54rem;
   padding-bottom: 30rem;
@@ -771,6 +793,10 @@
 
   @include respond(laptop-hq) {
     margin-top: -30rem;
+  }
+
+  @include respond(laptop) {
+    margin-top: -50rem;
   }
 
   .container {
@@ -841,6 +867,7 @@
   &__link {
     width: 8.5rem;
     font-size: 1.6rem;
+    height: 2.4rem;
     color: $main-red-color;
     display: flex;
     align-items: center;
